--- a/public/modules/buddyevents/views/edit-buddyevent.client.view.html
+++ b/public/modules/buddyevents/views/edit-buddyevent.client.view.html
@@ -1,19 +1,14 @@
-<section data-ng-controller="MembersController" data-ng-init="findOne()">
+<section data-ng-controller="BuddyeventsController" data-ng-init="findOne()">
     <div class="page-header">
-        <h1>Edit Member</h1>
+        <h1>Edit Buddyevent</h1>
     </div>
     <div class="col-md-12">
-
         <form class="form-horizontal" data-ng-submit="update()" novalidate>
             <fieldset>
                 <div class="form-group">
+                    <label class="control-label" for="name">Name</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="member.firstname" id="firstname" class="form-control" placeholder="Vorname" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="controls">
-                        <input type="text" data-ng-model="member.lastname" id="lastname" class="form-control" placeholder="Nachname" required>
+                        <input type="text" data-ng-model="buddyevent.name" id="name" class="form-control" placeholder="Name" required>
                     </div>
                 </div>
                 <div class="form-group">
