--- a/public/less/application.less
+++ b/public/less/application.less
@@ -55,3 +55,4 @@
 
 @import "../modules/core/less/core.less";
 @import "../modules/teams/less/teams.less";
+@import "../modules/buddyevents/less/buddyevents.less";
