--- a/public/modules/teams/views/list-teams.client.view.html
+++ b/public/modules/teams/views/list-teams.client.view.html
@@ -1,30 +1,4 @@
-<section data-ng-controller="TeamsController" data-ng-init="find()">
-<div class="col-md-6">
-    <div class="page-header">
-        <h1>Deine Teams</h1>
-    </div>
-    <div class="list-group">
-        <div class="panel panel-primary" data-ng-repeat="team in teams">
-            <div class="panel-heading">
-                <h2 class="panel-title" data-ng-bind="team.name"></h2>
-            </div>
-            <div class="panel-body">
-                <h5 data-ng-bind="team.description"></h5>
-                <div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == team.user._id))">
-                    <a class="btn btn-primary" href="/#!/teams/{{team._id}}/edit">
-                        <i class="glyphicon glyphicon-edit"></i>
-                    </a>
-                    <a class="btn btn-primary" data-ng-click="remove(team);">
-                        <i class="glyphicon glyphicon-trash"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="alert alert-warning text-center" data-ng-hide="!teams.$resolved || teams.length">
-    	No Teams yet, why don't you <a href="/#!/teams/create">create one</a>?
-    </div>
-</div>
+ <section data-ng-controller="TeamsController" data-ng-init="find()">
 <div class="col-md-6">
      <div class="page-header">
         <h1>Erstelle ein neues Team</h1>
@@ -51,6 +25,31 @@
             </fieldset>
         </form>
     </div>
-
+</div>
+<div class="col-md-6">
+   <div class="page-header">
+        <h1>Deine Teams</h1>
+    </div>
+    <div class="list-group">
+        <div class="panel panel-primary" data-ng-repeat="team in teams">
+            <div class="panel-heading">
+                <h2 class="panel-title" data-ng-bind="team.name"></h2>
+            </div>
+            <div class="panel-body">
+                <h5 data-ng-bind="team.description"></h5>
+                <div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == team.user._id))">
+                    <a class="btn btn-primary" href="/#!/team/{{team._id}}/edit">
+                        <i class="glyphicon glyphicon-edit"></i>
+                    </a>
+                    <a class="btn btn-primary" data-ng-click="remove(team);">
+                        <i class="glyphicon glyphicon-trash"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="alert alert-warning text-center" data-ng-hide="!teams.$resolved || teams.length">
+        No Teams yet, why don't you <a href="/#!/teams/create">create one</a>?
+    </div>
 </div>
 </section>
